--- a/src/components/Authentication/SignIn/_sign-in.scss
+++ b/src/components/Authentication/SignIn/_sign-in.scss
@@ -1,8 +1,8 @@
 .sign-in {
-	padding-bottom: 40px;
+	padding: 20px 0;
 
 	& > .sign-in__title {
-		margin-top: 100px;
+		margin-top: 50px;
 		text-align: center;
 		font-weight: bold;
 		text-transform: capitalize;
@@ -12,8 +12,8 @@
 		position: relative;
 		@include flex(column);
 		border: 3px solid $color-grey;
-		margin: 100px auto 0 auto;
-		width: 500px;
+		margin: 20px auto 0 auto;
+		width: 400px;
 		padding: 40px;
 		padding-top: 20px;
 		padding-bottom: 0;
