--- a/src/components/_commonComponents/_index.scss
+++ b/src/components/_commonComponents/_index.scss
@@ -6,3 +6,4 @@
 @import './FindWorkResults/_find-work-results.scss';
 @import './JobCard/_job-card.scss';
 @import './JobFilter/_job-filter.scss';
+@import './LoadingMessage/_loading-message.scss';
