--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -4,8 +4,7 @@
 	justify-content: flex-start;
 	align-items: flex-start;
 	border-top: 4px solid $color-grey;
-	padding: 20px 40px;
-	margin: 0 -40px;
+	padding: 20px 0;
 	margin-top: 40px;
 	
 	& > .hovered {
