Employee role fixed

--- a/src/components/Employee/CVEdit/_cv-edit.scss
+++ b/src/components/Employee/CVEdit/_cv-edit.scss
@@ -29,12 +29,14 @@
 						& > span {
 							position: absolute;
 							color: $color-grey_1;
-							font-size: 0.5rem;
+							font-size: 1rem;
 							top: 40px;
 						}
 					}
 					
 					&__items {
+						width: 250px;
+					
 						& > .items {
 							&__item {
 								margin-top: 30px;
