--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -21,6 +21,7 @@
 				color: $color-broun;
 				border: 1px solid $color-broun;
 				border-radius: 2px;
+				margin-right: 20px;
 				padding: 10px;
 				cursor: pointer;
 				text-decoration: none;
