--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,6 +14,8 @@
 @import '../components/Employee/CVEdit/_cv-edit.scss';
 @import '../components/Employee/FindJob/find-job.scss';
 @import '../components/Employee/JobSearchTips/_job-search-tips.scss';
+@import '../components/Employee/VacanciesShow/vacancies-show.scss';
+@import '../components/Employee/VacanciesSavedShow/_vacancies-savedshow.scss';
 
 // Employer
 @import '../components/Employeer/CreateJob/_create-job.scss';
